--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           node-version-file: .node-version
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.2.4
+
       - name: Install Dependencies
         id: install
         run: pnpm install
